TFP-5972 bruk saksnummer for tilgangskontroll (#2998)
* TFP-5972 bruk saksnummer for tilgangskontroll

* Siste fp-bom